# poetry-plugin-drop-python-upper-constraint

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.md  pyproject.toml
.github/: renovate.json5
.github/workflows/: dependency-auto-review.yaml  main.yaml  pull-request-automation.yaml
ci/: requirements.txt
example/: pyproject.toml
poetry_plugin_drop_python_upper_constraint/: __init__.py
