[tool.black]
line-length = 110
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "poetry-plugin-drop-python-upper-constraint"
version = "0.0.0"
description = "Poetry plugin used to drop upper constraints for Python"
readme = "README.md"
repository = "https://github.com/sbrunner/poetry-plugin-drop-python-upper-constraint"
keywords = ["poetry", "plugin", "python", "constraint"]
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
poetry = "==1.8.1"

[tool.poetry.dev-dependencies]
prospector = { version = "1.10.3", extras = ["with_bandit", "with_mypy", "with_pyroma"] }

[tool.poetry.plugins."poetry.application.plugin"]
poetry_plugin_drop_python_upper_constraint = "poetry_plugin_drop_python_upper_constraint:Plugin"

[tool.poetry.group.dev.dependencies]
prospector-profile-duplicated = "0.5.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "version_branch" -%}
{{serialize_pep440(bump_version(base, 1 if env.get("IS_MASTER") == "TRUE" else 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
