[tool.poetry]
name = "poetry-plugin-drop-python-upper-constraint"
version = "0.0.0"
description = "Poetry plugin used to drop upper constraints for Python"
readme = "README.md"
repository = "https://github.com/sbrunner/poetry-plugin-drop-python-upper-constraint"
keywords = ["poetry", "plugin", "python", "constraint"]
authors = ["Stéphane Brunner <stephane.brunner@camptocamp.com>"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
packages = [{ include = "poetry_plugin_drop_python_upper_constraint" }, { include = "poetry_plugin_drop_python_upper_constraint/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.9.2,<3.14"
poetry = "==1.8.5"
idna = "3.10"
cryptography = "44.0.0"
urllib3 = "2.3.0"
certifi = "2024.12.14"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.13.3", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.0"
prospector-profile-utils = "1.14.1"

[tool.poetry.plugins."poetry.application.plugin"]
poetry_plugin_drop_python_upper_constraint = "poetry_plugin_drop_python_upper_constraint:Plugin"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version", "poetry-plugin-drop-python-upper-constraint"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"
