[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9.2,<3.14"
poetry = "==2.0.1"
idna = "3.10"
cryptography = "45.0.4"
urllib3 = "2.4.0"
certifi = "2025.6.15"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with_bandit", "with_mypy", "with_pyroma", "with_ruff"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.23.0"

[tool.poetry.plugins."poetry.application.plugin"]
poetry_plugin_drop_python_upper_constraint = "poetry_plugin_drop_python_upper_constraint:Plugin"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
dynamic = ["dependencies", "version"]
name = "poetry-plugin-drop-python-upper-constraint"
description = "Poetry plugin used to drop upper constraints for Python"
readme = "README.md"
keywords = ["poetry", "plugin", "python", "constraint"]
license = "BSD-2-Clause"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Plugins',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@camptocamp.com"}]
packages = [{ include = "poetry_plugin_drop_python_upper_constraint" }, { include = "poetry_plugin_drop_python_upper_constraint/py.typed" }]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/sbrunner/poetry-plugin-drop-python-upper-constraint"
"Bug Tracker" = "https://github.com/sbrunner/poetry-plugin-drop-python-upper-constraint/issues"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-tweak-dependencies-version"]
build-backend = "poetry.core.masonry.api"
